# skillsmith

./: # MCP Python SDK.txt  .cursorrules  .gitignore  .windsurfrules  AGENTS.md  CLAUDE.md  FEATURE.md  GEMINI.md  PATHS.md  README.md  ROADMAP.md  UPCOMING_FEATURES.md  decision.md  issue.md  my_Referce.md  noted_down.md  pyproject.toml  sitecustomize.py  skills.lock.json  test_cli.py  tree.txt  verify_zip.ps1  workflow.json
.agent/: MISSION.md  PROJECT.md  ROADMAP.md  STATE.md  evolution.jsonl  lessons.md  memory.md  mission.json  prd.md  project_profile.yaml  skill_catalog.json  status.md
.agent/context/: project-context.md  prototypes.md
.agent/evals/: captured_skills.md  provider_telemetry.jsonl
.agent/handoffs/: evolution_repair_test_repair_skill.json  task_10_researcher.json  task_11_implementer.json  task_12_reviewer.json  task_1_orchestrator.json  task_2_researcher.json  task_3_implementer.json  task_4_reviewer.json  task_5_orchestrator.json  task_6_researcher.json  task_7_implementer.json  task_8_reviewer.json  task_9_orchestrator.json
.agent/logs/: raw_events.jsonl
.agent/principles/: CORE_PRINCIPLES.md
.agent/workflows/: align.md  audit.md  autonomous.md  benchmark.md  bootstrap.md  brainstorm.md  cleanup.md  compose.md  context.md  debug-issue.md  debug.md  deploy-checklist.md  discover-project.md  doc.md  evolve.md  explain.md  implement-feature.md  lint.md  metrics.md  migrate.md  performance.md  plan-feature.md  profile.md  ready.md  refactor.md  report.md  review-changes.md  review.md  search.md  security.md  sync.md  test-changes.md  test.md  verify.md
.agents/: prd.md
.claude/: settings.local.json
.claude/agents/: implementer.md  orchestrator.md  researcher.md  (+1 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
docs/: ARCHITECTURE.md  BIT_BY_BIT_GUIDE.excalidraw  BIT_BY_BIT_GUIDE.md  COMMANDS.md  COOKBOOK.md  EVOLUTION_ENGINE_REPORT.md  PHASE2_COMPLETION.md  ROADMAP.md  STATUS_UPDATE.md  UPCOMING_FEATURES.md  _audit_docs_tmp.md  _audit_pkg_tmp.md  _audit_workflow_tmp.md  basic_readiness_audit.md  competitive_research.md  current_vs_expected_task_list.md  implementation_plan.md  my_Referce.md  reference_patterns.md  user-flow.excalidraw
tests/: __init__.py  conftest.py  test_000_tempdir_compat.py  test_audit.py  test_autonomy_command.py  test_autonomy_runtime.py  test_cli.py  test_cli_version.py  test_commands.py  test_context_index.py  test_context_index_freshness.py  test_docs_recipes.py  test_doctor_behavior.py  test_eval_command.py  test_integration_e2e.py  test_lockfile_integrity.py  test_lockfile_reporting_coverage.py  test_machine_output_contract.py  test_profile_policy_cli.py  test_provider_policy.py  test_provider_retry.py  test_public_api.py  test_quickstart_smoke.py  test_readiness_artifacts.py  test_ready_command.py  test_recommend_command.py  test_registry_command.py  test_registry_service.py  test_roles_command.py  test_safety_command.py  test_stability_contract.py  test_start_command.py  test_suggest_command.py  test_trust_service.py  test_workflow_stages.py
(+423 files in other folders)
