[project]
name = "skillsmith"
version = "0.5.3"
description = "The premier agentic skills library for professional AI engineering"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "ApexIQ", email = "contact@apexiq.ai" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
]
keywords = ["ai", "agents", "scaffolding", "skills", "productivity", "skillsmith"]
dependencies = [
    "click>=8.0",
    "rich>=10.0",
    "requests>=2.25.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.6",
    "PyYAML>=6.0",
]

[project.scripts]
skillsmith = "skillsmith.cli:main"
skillsmith-mcp = "skillsmith.mcp_server:run_server"

[project.urls]
Homepage = "https://github.com/ApexIQ/skillsmith"
Issues = "https://github.com/ApexIQ/skillsmith/issues"
Repository = "https://github.com/ApexIQ/skillsmith.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/skillsmith"]
