[project]
name = "skillsmith"
version = "1.1.0"
description = "The premier operating system for AI coding agents — standardize, compose, and scale skills-as-code."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "ApexIQ", email = "contact@apexiq.ai" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
]
keywords = ["ai", "agents", "llm", "claude-code", "cursor", "windsurf", "zencoder", "scaffolding", "skills", "productivity", "skillsmith", "ai-engineering", "mcp"]
dependencies = [
    "click>=8.0",
    "rich>=10.0",
    "requests>=2.25.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.0.0",
]

[dependency-groups]
dev = [
    "build>=1.2",
    "pytest>=7.0",
    "pytest-mock>=3.6",
    "PyYAML>=6.0",
    "twine>=5.1.1",
]

[project.scripts]
skillsmith = "skillsmith.cli:main"
skillsmith-mcp = "skillsmith.mcp_server:run_server"

[project.urls]
Homepage = "https://github.com/ApexIQ/skillsmith"
Issues = "https://github.com/ApexIQ/skillsmith/issues"
Repository = "https://github.com/ApexIQ/skillsmith.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
    "src/skillsmith/templates/.agent/skills.zip",
    "**/__pycache__/**",
    "**/*.py[cod]",
]

[tool.hatch.build.targets.wheel]
packages = ["src/skillsmith"]

[tool.hatch.build.targets.sdist]
include = [
    "src/skillsmith/**",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]


